--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,143 @@
+body {
+    background: wheat;
+    display: flex;
+    flex-direction: column;
+}
+
+#app {
+    display: flex;
+    gap: 50px;
+    padding: 30px;
+    flex-wrap: wrap;
+}
+
+#calcBtn {
+    background: #b4f71a;
+    border-radius: 8px;
+    border: none;
+    width: 300px;
+    padding: 10px;
+    margin: 50px auto;
+    outline: none;
+    cursor: pointer;
+}
+
+#distance {
+    margin: 0 auto;
+}
+
+.card {
+    background: #ffffffb4;
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 300px;
+    position: relative;
+}
+
 .title {
-    color: wheat;
+    color: rgb(153, 153, 152);
+    font-size: 18px;
+    line-height: 26px;
+    margin: 0;
 }
 
-.test { 
-    margin-bottom: 100px;
+.text {
+    font-size: 26px;
+    margin: 0;
+    font-weight: 700;
 }
 
-.test-2 {
-    margin-top: 130px;
+.edit-button {
+    position: absolute;
+    right: 10px;
+    border: 2px solid #ff1010b4;
+    border-radius: 8px;
+    padding: 5px;
+    background: none;
+    cursor: pointer;
+    color: #a13131;
 }
 
-.div {
-    background: #000;
+.edit-button:hover {
+    opacity: 0.7;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* display: none;  */
+}
+
+.edit-menu {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 20px;
+    height: 100%;
 }
 
 .input {
-    width: 1000px;
+    padding: 7px;
+    border: 1px solid blueviolet;
+    border-radius: 8px;
+    min-width: 200px;
+    outline: none;
+}
+
+.select {
+    padding: 7px;
+    border: 1px solid blueviolet;
+    border-radius: 8px;
+    min-width: 200px;
+    outline: none;
+}
+
+.save-btn {
+    background: none;
+    padding: 7px;
+    border: 1px solid blueviolet;
+    border-radius: 8px;
+    min-width: 200px;
+    outline: none;
+    cursor: pointer;
+}
+
+.save-btn:hover {
+    opacity: 0.5;
+}
+
+.card-test {
+    color: #000;
+}
+
+.close-btn {
+    background: none;
+    height: 20px;
+    border: none;
+    width: 20px;
+    outline: none;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    font-weight: 700;
+    font-size: 22px;
+    top: 5px;
 }
