--- a/src/style.css
+++ b/src/style.css
@@ -141,3 +141,11 @@ body {
     font-size: 22px;
     top: 5px;
 }
+
+.test-div-class {
+    color: #ffffffb4;
+}
+
+.test-div-classtest {
+    color: #572f2fb4;
+}
